# OpenGL-Raytracing

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  run.sh
mesh/: suzanne.mtl
shaders/: compute.glsl  fragment.glsl  vertex.glsl
src/: Application.cpp  Application.h  Renderer.cpp  Renderer.h  Shader.h  light.h  main.cpp  material.h  ray.h  sphere.cpp  sphere.h  vector3.h
src/Application/: Application.cpp  Application.h  Camera.h  Renderer.cpp  Renderer.h  Scene.h
src/BVH/: BVH.cpp  BVH.h  BVHNode.h
src/Core/: Application.cpp  Camera.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
src/core/: Application.cpp  Camera.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
src/globals/: Globals.h
src/math/: AABB.h  Light.h  Material.h  Sphere.h  Triangle.h  Vector3.h
src/mesh/: Mesh.h
